...
                    // Apply Button
                    Button(
                        onClick = onApply,
                        modifier =
                            Modifier.fillMaxWidth()
                                .height(36.dp)
                                .testTag("applyButton"), // Test tag for apply button
                        shape = RoundedCornerShape(12.dp),
                        colors = ButtonDefaults.buttonColors(containerColor = Color(0xFF800000))) {
                          Text(text = "Apply", fontSize = 15.sp, color = Color.White)
                        }

                    // Reset Button
...
